# Anomalyze

./: CHANGELOG.md  README.md  compile.txt  pyproject.toml
docs/: ROADMAP.md
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: test_detector.py
src/anomalyze/: __init__.py  alerts.py  baseline.py  cli.py  collectors.py  config.py  detector.py  engine.py  logging_utils.py  models.py
src/anomalyze/.anomalyze/: baseline.json
